// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select/> component <Select/> is disabled 1`] = `
.emotion-0 {
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-1 {
  line-height: inherit;
  border: none;
  margin-left: 5px;
  background: transparent;
  padding: 0;
  width: calc(0ch + 5px);
  font-size: smaller;
  cursor: pointer;
}

.emotion-1:focus {
  outline: none;
}

<div>
  <div
    aria-expanded={false}
    aria-label="Dropdown select"
    className="react-dropdown-select undefined"
    onClick={[Function]}
    onKeyDown={[Function]}
    style={
      {
        "alignItems": "center",
        "border": "1px solid #ccc",
        "borderRadius": "2px",
        "boxSizing": "border-box",
        "cursor": "not-allowed",
        "direction": "ltr",
        "display": "flex",
        "flexDirection": "row",
        "minHeight": "36px",
        "opacity": 0.3,
        "padding": "2px 5px",
        "pointerEvents": "none",
        "position": "relative",
        "width": "100%",
      }
    }
    tabIndex={-1}
  >
    <div
      className="react-dropdown-select-content react-dropdown-select-type-single emotion-0"
      onClick={[Function]}
    >
      <input
        className="react-dropdown-select-input emotion-1"
        disabled={true}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
        readOnly={true}
        size={0}
        tabIndex="-1"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`<Select/> component <Select/> renders correctly 1`] = `
.emotion-0 {
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-1 {
  line-height: inherit;
  border: none;
  margin-left: 5px;
  background: transparent;
  padding: 0;
  width: calc(0ch + 5px);
  font-size: smaller;
  cursor: pointer;
}

.emotion-1:focus {
  outline: none;
}

<div>
  <div
    aria-expanded={false}
    aria-label="Dropdown select"
    className="react-dropdown-select undefined"
    onClick={[Function]}
    onKeyDown={[Function]}
    style={
      {
        "alignItems": "center",
        "border": "1px solid #ccc",
        "borderRadius": "2px",
        "boxSizing": "border-box",
        "cursor": "pointer",
        "direction": "ltr",
        "display": "flex",
        "flexDirection": "row",
        "minHeight": "36px",
        "opacity": 1,
        "padding": "2px 5px",
        "pointerEvents": "all",
        "position": "relative",
        "width": "100%",
      }
    }
    tabIndex={0}
  >
    <div
      className="react-dropdown-select-content react-dropdown-select-type-single emotion-0"
      onClick={[Function]}
    >
      <input
        className="react-dropdown-select-input emotion-1"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
        readOnly={true}
        size={0}
        tabIndex="-1"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`<Select/> component <Select/> renders with clearable 1`] = `
.emotion-0 {
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-1 {
  line-height: inherit;
  border: none;
  margin-left: 5px;
  background: transparent;
  padding: 0;
  width: calc(0ch + 5px);
  font-size: smaller;
  cursor: pointer;
}

.emotion-1:focus {
  outline: none;
}

.emotion-2 {
  line-height: 25px;
  margin: 0 10px;
  cursor: pointer;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2:hover {
  color: tomato;
}

<div>
  <div
    aria-expanded={false}
    aria-label="Dropdown select"
    className="react-dropdown-select undefined"
    onClick={[Function]}
    onKeyDown={[Function]}
    style={
      {
        "alignItems": "center",
        "border": "1px solid #ccc",
        "borderRadius": "2px",
        "boxSizing": "border-box",
        "cursor": "pointer",
        "direction": "ltr",
        "display": "flex",
        "flexDirection": "row",
        "minHeight": "36px",
        "opacity": 1,
        "padding": "2px 5px",
        "pointerEvents": "all",
        "position": "relative",
        "width": "100%",
      }
    }
    tabIndex={0}
  >
    <div
      className="react-dropdown-select-content react-dropdown-select-type-single emotion-0"
      onClick={[Function]}
    >
      <input
        className="react-dropdown-select-input emotion-1"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
        readOnly={true}
        size={0}
        tabIndex="-1"
        value=""
      />
    </div>
    <div
      className="react-dropdown-select-clear emotion-2"
      onClick={[Function]}
      onKeyPress={[Function]}
      tabIndex="-1"
    >
      ×
    </div>
  </div>
</div>
`;

exports[`<Select/> component <Select/> renders with custom search function 1`] = `
.emotion-0 {
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-1 {
  line-height: inherit;
  border: none;
  margin-left: 5px;
  background: transparent;
  padding: 0;
  width: calc(3ch + 5px);
  font-size: smaller;
  cursor: pointer;
}

.emotion-1:focus {
  outline: none;
}

<div>
  <div
    aria-expanded={false}
    aria-label="Dropdown select"
    className="react-dropdown-select undefined"
    onClick={[Function]}
    onKeyDown={[Function]}
    style={
      {
        "alignItems": "center",
        "border": "1px solid #ccc",
        "borderRadius": "2px",
        "boxSizing": "border-box",
        "cursor": "pointer",
        "direction": "ltr",
        "display": "flex",
        "flexDirection": "row",
        "minHeight": "36px",
        "opacity": 1,
        "padding": "2px 5px",
        "pointerEvents": "all",
        "position": "relative",
        "width": "100%",
      }
    }
    tabIndex={0}
  >
    <div
      className="react-dropdown-select-content react-dropdown-select-type-single emotion-0"
      onClick={[Function]}
    >
      <input
        className="react-dropdown-select-input emotion-1"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
        readOnly={true}
        size={3}
        tabIndex="-1"
        value="Zer"
      />
    </div>
  </div>
</div>
`;

exports[`<Select/> component <Select/> renders with loading 1`] = `
.emotion-0 {
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-1 {
  line-height: inherit;
  border: none;
  margin-left: 5px;
  background: transparent;
  padding: 0;
  width: calc(0ch + 5px);
  font-size: smaller;
  cursor: pointer;
}

.emotion-1:focus {
  outline: none;
}

.emotion-2 {
  padding: 0 5px;
  display: block;
  width: auto;
  height: auto;
}

.emotion-2:after {
  content: ' ';
  display: block;
  width: 16px;
  height: 16px;
  border-radius: 50%;
  border-width: 1px;
  border-style: solid;
  border-color: transparent;
  -webkit-animation: dual-ring-spin 0.7s ease-in-out infinite;
  animation: dual-ring-spin 0.7s ease-in-out infinite;
  margin: 0 0 0 -10px;
}

<div>
  <div
    aria-expanded={false}
    aria-label="Dropdown select"
    className="react-dropdown-select undefined"
    onClick={[Function]}
    onKeyDown={[Function]}
    style={
      {
        "alignItems": "center",
        "border": "1px solid #ccc",
        "borderRadius": "2px",
        "boxSizing": "border-box",
        "cursor": "pointer",
        "direction": "ltr",
        "display": "flex",
        "flexDirection": "row",
        "minHeight": "36px",
        "opacity": 1,
        "padding": "2px 5px",
        "pointerEvents": "all",
        "position": "relative",
        "width": "100%",
      }
    }
    tabIndex={0}
  >
    <div
      className="react-dropdown-select-content react-dropdown-select-type-single emotion-0"
      onClick={[Function]}
    >
      <input
        className="react-dropdown-select-input emotion-1"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
        readOnly={true}
        size={0}
        tabIndex="-1"
        value=""
      />
    </div>
    <div
      className="react-dropdown-select-loading emotion-2"
    />
  </div>
</div>
`;

exports[`<Select/> component <Select/> renders with name 1`] = `
.emotion-0 {
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-1 {
  line-height: inherit;
  border: none;
  margin-left: 5px;
  background: transparent;
  padding: 0;
  width: calc(0ch + 5px);
  font-size: smaller;
  cursor: pointer;
}

.emotion-1:focus {
  outline: none;
}

<div>
  <div
    aria-expanded={false}
    aria-label="Dropdown select"
    className="react-dropdown-select undefined"
    onClick={[Function]}
    onKeyDown={[Function]}
    style={
      {
        "alignItems": "center",
        "border": "1px solid #ccc",
        "borderRadius": "2px",
        "boxSizing": "border-box",
        "cursor": "pointer",
        "direction": "ltr",
        "display": "flex",
        "flexDirection": "row",
        "minHeight": "36px",
        "opacity": 1,
        "padding": "2px 5px",
        "pointerEvents": "all",
        "position": "relative",
        "width": "100%",
      }
    }
    tabIndex={0}
  >
    <div
      className="react-dropdown-select-content react-dropdown-select-type-single emotion-0"
      onClick={[Function]}
    >
      <input
        className="react-dropdown-select-input emotion-1"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
        readOnly={true}
        size={0}
        tabIndex="-1"
        value=""
      />
    </div>
    <input
      defaultValue={[]}
      name="form-select"
      style={
        {
          "opacity": 0,
          "position": "absolute",
          "width": 0,
        }
      }
      tabIndex={-1}
    />
  </div>
</div>
`;

exports[`<Select/> component <Select/> renders with separator 1`] = `
.emotion-0 {
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-1 {
  line-height: inherit;
  border: none;
  margin-left: 5px;
  background: transparent;
  padding: 0;
  width: calc(0ch + 5px);
  font-size: smaller;
  cursor: pointer;
}

.emotion-1:focus {
  outline: none;
}

.emotion-2 {
  border-left: 1px solid #ccc;
  width: 1px;
  height: 25px;
  display: block;
}

<div>
  <div
    aria-expanded={false}
    aria-label="Dropdown select"
    className="react-dropdown-select undefined"
    onClick={[Function]}
    onKeyDown={[Function]}
    style={
      {
        "alignItems": "center",
        "border": "1px solid #ccc",
        "borderRadius": "2px",
        "boxSizing": "border-box",
        "cursor": "pointer",
        "direction": "ltr",
        "display": "flex",
        "flexDirection": "row",
        "minHeight": "36px",
        "opacity": 1,
        "padding": "2px 5px",
        "pointerEvents": "all",
        "position": "relative",
        "width": "100%",
      }
    }
    tabIndex={0}
  >
    <div
      className="react-dropdown-select-content react-dropdown-select-type-single emotion-0"
      onClick={[Function]}
    >
      <input
        className="react-dropdown-select-input emotion-1"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
        readOnly={true}
        size={0}
        tabIndex="-1"
        value=""
      />
    </div>
    <div
      className="react-dropdown-select-separator emotion-2"
    />
  </div>
</div>
`;

exports[`<Select/> component <Select/> renders with short color 1`] = `
.emotion-0 {
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-1 {
  line-height: inherit;
  border: none;
  margin-left: 5px;
  background: transparent;
  padding: 0;
  width: calc(0ch + 5px);
  font-size: smaller;
  cursor: pointer;
}

.emotion-1:focus {
  outline: none;
}

<div>
  <div
    aria-expanded={false}
    aria-label="Dropdown select"
    className="react-dropdown-select undefined"
    onClick={[Function]}
    onKeyDown={[Function]}
    style={
      {
        "alignItems": "center",
        "border": "1px solid #ccc",
        "borderRadius": "2px",
        "boxSizing": "border-box",
        "cursor": "pointer",
        "direction": "ltr",
        "display": "flex",
        "flexDirection": "row",
        "minHeight": "36px",
        "opacity": 1,
        "padding": "2px 5px",
        "pointerEvents": "all",
        "position": "relative",
        "width": "100%",
      }
    }
    tabIndex={0}
  >
    <div
      className="react-dropdown-select-content react-dropdown-select-type-single emotion-0"
      onClick={[Function]}
    >
      <input
        className="react-dropdown-select-input emotion-1"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
        readOnly={true}
        size={0}
        tabIndex="-1"
        value=""
      />
    </div>
  </div>
</div>
`;
